[gd_scene load_steps=2 format=3 uid="uid://1csgo39iubbz9"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_id"]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_id")

[node name="Overlay" type="ColorRect" parent="."]
color = Color(0, 0, 0, 0.5)
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PausePanel" type="Panel" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
text = "Resume"
min_size = Vector2(200, 40)

[node name="SettingsButton" type="Button" parent="PausePanel/VBoxContainer"]
text = "Settings"
min_size = Vector2(200, 40)

[node name="MainMenuButton" type="Button" parent="PausePanel/VBoxContainer"]
text = "Main Menu"
min_size = Vector2(200, 40)

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
text = "Quit"
min_size = Vector2(200, 40)

